--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="facebook_app_id">1475669572699600</string>
+    <string name="title_activity_intermediate">IntermediateActivity</string>
 
 </resources>
