--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,30 @@
     <string name="title_activity_login">UsuarioLecturistaLogin</string>
     <string name="facebook_app_id">1475669572699600</string>
     <string name="title_activity_intermediate">IntermediateActivity</string>
+    <string name="title_activity_main_drawer">MainDrawerActivity</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="action_example">Example action</string>
+
+    <!--GOLOCKY STUFF FOR TESTING MODIFY THIS-->
+    <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item>Balance</item>
+        <!-- this is the title with the mascot -->
+        <item>Lectura</item>
+        <item>Dummy</item>
+    </string-array>
+
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/shutter</item>
+        <item>@drawable/shutter</item>
+        <item>@drawable/shutter</item>
+
+    </array>
 
 </resources>
