--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">UsuarioLecturista</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login">UsuarioLecturistaLogin</string>
+    <string name="title_activity_login">UsuarioLecturista</string>
     <string name="facebook_app_id">1475669572699600</string>
     <string name="title_activity_intermediate">IntermediateActivity</string>
     <string name="title_activity_main_drawer">MainDrawerActivity</string>
@@ -19,9 +19,8 @@
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Balance</item>
-        <!-- this is the title with the mascot -->
         <item>Lectura</item>
-        <item>Dummy</item>
+        <item>LogOut</item>
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
