--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,9 @@
     <string name="toolbarTitleNotificationsFragment">Notificaciones</string>
     <string name="infoNotificationsFragmentSwipe">Desliza para eliminar la notificacion</string>
 
+    <!--Contact fragment-->
+    <string name="toolbarTitleContactFragment">Contacto</string>
+
 
     <string-array name="drop_down_credit_card_type">
         <item>VISA</item>
