--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
         <item>@drawable/ic_settings_black_48dp</item>
     </array>
 
-    <!--Balance-->
+    <!-- Balance -->
     <string-array name="drop_down_example">
         <item>1 Nov - 30 Nov 2014</item>
         <item>1 Oct - 31 Oct 2014</item>
@@ -48,13 +48,13 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!--PayOptions-->
+    <!-- PayOptions -->
     <string name="textAddCreditCard">Agregar tarjeta</string>
     <string name="labelPayInOxxo">Pague en el Oxxo con este codigo de barras</string>
     <string name="labelPaymentOptionDesc">Seleccione una opcion para pagar:</string>
     <string name="toolbarTitlePayOptions">Opciones de Pago</string>
 
-    <!--Add Credit Card -->
+    <!-- Add Credit Card -->
     <string name="labelCreditCardType">Tipo de Tarjeta</string>
     <string name="labelCreditCardNumber">Numero de Tarjeta</string>
     <string name="labelNameOnCreditCard">Nombre que aparece en la Tarjeta</string>
@@ -64,27 +64,37 @@
     <string name="labelCheckBoxAgreedWithCCTAC">Estoy de acuerdo con los terminos y condiciones</string>
     <string name="toolbarTitleAddCreditCard">Agregar Tarjeta</string>
 
-    <!--Pay Fragment-->
+    <!-- Pay Fragment -->
     <string name="toolbarTitlePayFragment">Pagar</string>
     <string name="labelButtonPayFragmentPay">Pagar</string>
     <string name="labelSubTotal">Total a pagar:</string>
 
-    <!--Promotions fragment-->
+    <!-- Promotions fragment -->
     <string name="toolbarTitlePromotionsFragment">Promociones</string>
 
-    <!--Notifications fragment-->
+    <!-- Notifications fragment -->
     <string name="toolbarTitleNotificationsFragment">Notificaciones</string>
     <string name="infoNotificationsFragmentSwipe">Desliza para eliminar la notificacion</string>
 
-    <!--Contact fragment-->
+    <!-- Contact fragment -->
     <string name="toolbarTitleContactFragment">Contacto</string>
-
 
     <string-array name="drop_down_credit_card_type">
         <item>VISA</item>
         <item>Master Card</item>
         <item>AMEX</item>
     </string-array>
+
+    <!--Intro-->
+    <string name="title_activity_instructions">InstructionsActivity</string>
+    <string name="intro_welcome_title">Te damos la bienvenida!</string>
+    <string name="intro_welcome_desc">Desliza para obtener informacion acerca de la aplicacion.</string>
+    <string name="intro_meter_title">Consulta tu consumo actual tomando foto de tu medidor.</string>
+    <string name="intro_pay_title">Paga tu recibo en linea.</string>
+    <string name="intro_promotion_title">Obten promociones exclusivas como descuentos al prepagar</string>
+    <string name="intro_final_title">Ahorra tiempo y dinero</string>
+    <string name="intro_final_desc">No publicaremos nada sin tu consentimiento</string>
+    <string name="btn_facebook_intro">Registrate con Facebook</string>
 
 
 </resources>
