--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <!-- GOLOCKY STUFF FOR TESTING MODIFY THIS -->
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
-        <item>Balance</item>
+        <item>Consumo</item>
         <item>Promociones</item>
         <item>Notificaciones</item>
         <item>Contacto</item>
@@ -32,11 +32,11 @@
     <!-- Nav Drawer List Item Icons -->
     <!-- Keep them in order as the titles are in -->
     <array name="nav_drawer_icons">
-        <item>@drawable/ic_equalizer_black_48dp</item>
-        <item>@drawable/ic_new_releases_black_48dp</item>
-        <item>@drawable/ic_notifications_black_48dp</item>
-        <item>@drawable/ic_gps_fixed_black_48dp</item>
-        <item>@drawable/ic_settings_black_48dp</item>
+        <item>@drawable/ic_equalizer_black_24dp</item>
+        <item>@drawable/ic_new_releases_black_24dp</item>
+        <item>@drawable/ic_notifications_black_24dp</item>
+        <item>@drawable/ic_gps_fixed_black_24dp</item>
+        <item>@drawable/ic_settings_black_24dp</item>
     </array>
 
     <!-- Balance -->
@@ -112,6 +112,10 @@
     <string name="dialogTitleRegisterMeterBE">Registrando el Medidor</string>
     <string name="DialogContentPleaseWait">Por favor espere...</string>
     <string name="DialogTitleCheckingParameters">Verificando Parametros</string>
+    <string name="consumeLabelsLastReadingDay">Ultima lectura realizada el dia:</string>
+    <string name="consumeLabelsTotalAmount">Consumo Total:</string>
+    <string name="consumeLabelsLimitDate">Fecha Limite:</string>
+    <string name="transitionFirstCardView">transitionFirstCardView</string>
 
 
 </resources>
