Changed the flow of the service chooser and the meter registration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="dialogTitleRegisterMeterBE">Registrando el Medidor</string>
     <string name="DialogContentPleaseWait">Por favor espere…</string>
     <string name="DialogTitleCheckingParameters">Verificando Parametros</string>
+    <string name="DialogTitleRegisteringUser">Registrando Usuario</string>
 
     <string name="titleContentServiceChooser">Seleccione su proveedor de servicios</string>
 
