--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="billsLabelsLastBillAmount">Total ultima factura:</string>
     <string name="billsLabelsLastBillStatus">Estado:</string>
     <string name="billsLabelsSomething">3</string>
-    <string name="billsLabelsToPay">Total de la factura a pagar</string>
+    <string name="billsLabelsToPay">Total de la factura a pagar:</string>
     <string name="billsLabelsNoBillsToShow">No hay facturas para mostrar</string>
 
 
@@ -68,6 +68,24 @@
     <string name="textCreditCard">Tarjeta de crédito</string>
     <string name="labelPaymentOptionDesc">Seleccione una opción para pagar:</string>
     <string name="toolbarTitlePayOptions">Opciones de Pago</string>
+
+    <!--Prepaid-->
+    <string name="toolbarTitlePrepaidOptions">Pre-pago</string>
+    <string name="number_zero">0</string>
+    <string name="number_one">1</string>
+    <string name="number_two">2</string>
+    <string name="number_three">3</string>
+    <string name="number_four">4</string>
+    <string name="number_five">5</string>
+    <string name="number_six">6</string>
+    <string name="number_seven">7</string>
+    <string name="number_eight">8</string>
+    <string name="number_nine">9</string>
+    <string name="number_ten">10</string>
+    <string name="keyboard_clear">borrar</string>
+    <string name="desc_liters">Litros</string>
+    <string name="labelPrepaidPriceToPay">Precio a pagar:</string>
+
 
     <!-- Add Credit Card -->
     <string name="labelCreditCardType">Tipo de Tarjeta</string>
