invitation to create a new reading, also a messages on bills to show you that you have some debt, and a timer to disable the new bill button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,8 @@
     <string name="readingsLabelsTotalAmount">Metros cúbicos este periodo:</string>
     <string name="readingsLabelsLimitDate">Fecha limite de pago:</string>
     <string name="readingsLabelsNoReadingsToShow">No hay lecturas para mostrar</string>
+    <string name="readingsLabelsCameraInvitation">Tome una nueva lectura!!</string>
+
 
     <!--Bills-->
     <string name="toolbarTitleBills">Facturas</string>
